; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_88.c_getbdir.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_88.c_getbdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32 }

@.str = private unnamed_addr constant [36 x i8] c"getbdir(): allocating memory failed\00", align 1
@.str.1 = private unnamed_addr constant [22 x i8] c"tmp_%H:%M:%S_%d-%m-%Y\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @getbdir() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i32, align 4
  %3 = alloca %struct.tm*, align 8
  %4 = call i64 @malloc(i32 33)
  %5 = inttoptr i64 %4 to i8*
  store i8* %5, i8** %1, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %9, label %7

7:                                                ; preds = %0
  %8 = call i32 @printe(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i32 1)
  br label %9

9:                                                ; preds = %7, %0
  %10 = call i32 @time(i32* null)
  store i32 %10, i32* %2, align 4
  %11 = call %struct.tm* @localtime(i32* %2)
  store %struct.tm* %11, %struct.tm** %3, align 8
  %12 = load i8*, i8** %1, align 8
  %13 = load %struct.tm*, %struct.tm** %3, align 8
  %14 = call i32 @strftime(i8* %12, i32 32, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0), %struct.tm* %13)
  %15 = load i8*, i8** %1, align 8
  ret i8* %15
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @printe(i8*, i32) #1

declare dso_local i32 @time(i32*) #1

declare dso_local %struct.tm* @localtime(i32*) #1

declare dso_local i32 @strftime(i8*, i32, i8*, %struct.tm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
